WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294092
HDR images don't get dimmed when Safari goes to background
https://bugs.webkit.org/show_bug.cgi?id=294092
Summary
HDR images don't get dimmed when Safari goes to background
Mike Wyrzykowski
Reported
2025-06-05 15:24:46 PDT
HDR images don't get dimmed when Safari goes to background
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2025-06-05 15:54:20 PDT
<
rdar://problem/151892044
>
Mike Wyrzykowski
Comment 2
2025-06-05 15:54:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46390
EWS
Comment 3
2025-06-12 16:57:58 PDT
Committed
296171@main
(460ef7c5d333): <
https://commits.webkit.org/296171@main
> Reviewed commits have been landed. Closing PR #46390 and removing active labels.
Mike Wyrzykowski
Comment 4
2025-06-12 18:43:04 PDT
Reopened Bugzilla. Full layer tranversal will be a perf regression, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=294422
.
Mike Wyrzykowski
Comment 5
2025-06-12 19:04:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46691
Mike Wyrzykowski
Comment 6
2025-06-17 14:05:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46868
Mike Wyrzykowski
Comment 7
2025-06-17 22:29:48 PDT
***
Bug 294654
has been marked as a duplicate of this bug. ***
EWS
Comment 8
2025-06-20 13:47:51 PDT
Committed
296453@main
(10635ec82dfc): <
https://commits.webkit.org/296453@main
> Reviewed commits have been landed. Closing PR #46868 and removing active labels.
Mike Wyrzykowski
Comment 9
2025-06-23 13:47:05 PDT
Reopened Bugzilla. This caused a crash in Safari, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=294862
.
Mike Wyrzykowski
Comment 10
2025-12-01 09:12:58 PST
294862 was never merged, this bug was in an incorrect state, back to resolved + fixed
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug